# bottle-rs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  diesel.toml
bottle_core/: Cargo.toml
bottle_core/src/: error.rs  feed.rs  lib.rs  library.rs  schema.rs
bottle_download/: Cargo.toml
bottle_download/src/: error.rs  harvest.rs  lib.rs  thumb.rs
bottle_library/: Cargo.toml
bottle_library/src/: album.rs  download.rs  lib.rs  model.rs  util.rs  work.rs
bottle_panda/: Cargo.toml
bottle_panda/src/: api.rs  cache.rs  community.rs  download.rs  feed.rs  group.rs  lib.rs  model.rs  util.rs
bottle_pixiv/: Cargo.toml
bottle_pixiv/src/: api.rs  cache.rs  community.rs  feed.rs  group.rs  lib.rs  model.rs  util.rs
bottle_server/: Cargo.toml
bottle_server/src/: background_job.rs  error.rs  main.rs  payload.rs  router.rs  state.rs  util.rs
bottle_server/src/background_job/: download.rs  entity.rs  feed.rs  panda.rs  util.rs
bottle_server/src/router/: account.rs  api.rs  feed.rs  job.rs  library.rs  work.rs
bottle_twitter/: Cargo.toml
bottle_twitter/src/: api.rs  cache.rs  community.rs  feed.rs  group.rs  model.rs  util.rs
bottle_util/: Cargo.toml
bottle_util/src/: diesel_ext.rs  iso8601.rs  lib.rs  macros.rs  parsing.rs
bottle_yandere/: Cargo.toml
bottle_yandere/src/: api.rs  cache.rs  community.rs  feed.rs  group.rs  lib.rs  model.rs  util.rs
migrations/2023-07-26-130818_create_twitter/: down.sql  up.sql
migrations/2023-08-11-105740_create_pixiv/: down.sql  up.sql
migrations/2023-08-23-133851_create_library/: down.sql  up.sql
migrations/2023-08-26-055051_create_index/: down.sql  up.sql
migrations/2023-08-26-075450_create_yandere/: down.sql  up.sql
migrations/2023-10-05-085947_create_yandere_2/: down.sql  up.sql
migrations/2023-10-22-073550_create_panda/: down.sql  up.sql
migrations/2024-06-24-124543_create_library_2/: down.sql  up.sql
panda_client/: Cargo.toml
panda_client/src/: consts.rs  error.rs  lib.rs  parsing.rs  result.rs  selectors.rs
pixiv_client/: Cargo.toml
pixiv_client/src/: consts.rs  error.rs  lib.rs  response.rs  result.rs
script/: build_docker.sh  run.sh
twitter_client/: Cargo.toml
twitter_client/src/: consts.rs  error.rs  lib.rs  response.rs  result.rs  test.rs  util.rs
yandere_client/: Cargo.toml
yandere_client/src/: error.rs  lib.rs  result.rs
