[package]
name = "bottle_server"
version = "0.1.0"
edition = "2021"

[dependencies]
bottle_core = { path = "../bottle_core" }
bottle_library = { path = "../bottle_library" }
bottle_twitter = { path = "../bottle_twitter" }
bottle_pixiv = { path = "../bottle_pixiv" }
bottle_yandere = { path = "../bottle_yandere" }
bottle_panda = { path = "../bottle_panda" }
bottle_download = { path = "../bottle_download" }
twitter_client = { path = "../twitter_client" }
pixiv_client = { path = "../pixiv_client" }
yandere_client = { path = "../yandere_client" }
panda_client = { path = "../panda_client" }
anyhow = { workspace = true }
axum = { workspace = true }
diesel = { workspace = true, features = ["r2d2"] }
dotenvy = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
libsqlite3-sys = { version = "0.26.0" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-retry = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
