[package]
name = "bottle_twitter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bottle_core = { path = "../bottle_core" }
bottle_library = { path = "../bottle_library" }
bottle_util = { path = "../bottle_util" }
twitter_client = { path = "../twitter_client" }
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
diesel = { workspace = true }
itertools = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
